[workspace]
resolver = "2"
members = [
    "bastion-plugin-totp",
    "bastion-plugin-postgres",
    "bastion-plugin-xca",
    "bastion-plugin-pmp",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ffquintella/BastionVault-Plugins"
authors = ["BastionVault contributors"]

# Reference plugins for BastionVault. See features/plugin-system.md (Phase 4)
# in the host repo. The SDK is consumed via a relative path because this
# repo is checked out as a submodule under `<host>/plugins-ext/`. For
# standalone builds, set BASTION_PLUGIN_SDK_PATH or override [patch] in a
# top-level workspace.

# WASM-friendly release profile applied to every workspace member.
# `panic = "abort"` skips unwind tables; `opt-level = "s"` favours size
# over speed; `lto = true` lets the linker drop unused std symbols. The
# postgres process plugin compiles native (not wasm) so the size knobs
# apply to it too — that binary is shipped to operators and small is
# better even for a server-side process.
[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
strip = true
