[package]
name = "bastion-plugin-pmp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ManageEngine Password Manager Pro (PMP) ExportPasswordView importer plugin for BastionVault. Process runtime."

[[bin]]
name = "bastion-plugin-pmp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
# `calamine` reads both legacy `.xls` (BIFF) and modern `.xlsx`
# (OOXML). `dates` pulls in chrono for the date conversions we
# don't actually use, so it's left off — PMP exports timestamps as
# strings, not Excel serial dates.
calamine = "0.31"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "test-util"] }
