[package]
name = "bastion-plugin-totp"
version = "0.1.12"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reference RFC 6238 TOTP plugin for BastionVault. WASM runtime."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bastion-plugin-sdk = { path = "../../crates/bastion-plugin-sdk", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = { version = "0.13", default-features = false }
sha1 = { version = "0.11", default-features = false }

[dev-dependencies]
bastion-plugin-sdk = { path = "../../crates/bastion-plugin-sdk", features = ["json", "host_test"] }
serial_test = "3"

[features]
# Passthrough so `cargo test --features host_test` exercises the
# host-stub-backed handler tests in src/lib.rs.
host_test = ["bastion-plugin-sdk/host_test"]
